--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,24 +1,20 @@
 [package]
-name = "whatsapp-cloud-api"
+name = "whatsapp-cloud-api-wasi"
 version = "0.5.3"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 description = "Whatsapp Cloud API Rust Client"
-homepage = "https://github.com/sajuthankappan/whatsapp-cloud-api-rs"
-repository = "https://github.com/sajuthankappan/whatsapp-cloud-api-rs"
+homepage = "https://github.com/flows-network/whatsapp-cloud-api-rs"
+repository = "https://github.com/flows-network/whatsapp-cloud-api-rs"
 readme = "README.md"
 keywords = ["whatsapp"]
 categories = ["api-bindings"]
 
 [dependencies]
 log = "0.4.20"
-reqwest = { version = "0.11.22", default-features = false, features = ["json"] }
+reqwest_wasi = { version = "0.11", features = ["json", "wasmedge-tls"] }
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
-
-[features]
-default = ["reqwest/native-tls"]
-rustls = ["reqwest/rustls-tls"]
 
 [dev-dependencies]
 dotenv = "0.15.0"
